--- a/routine.html
+++ b/routine.html
@@ -153,7 +153,7 @@
 <tr><td>9:30 AM </td><td>Breakfast</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
-<tr><td>        </td><td>Epic bison bites, cucumber, macadamia nuts</td>
+<tr><td>        </td><td>Cucumber, macadamia nuts</td>
 <tr><td>        </td><td>50 supplements</td>
 <tr><td>        </td><td>Rinse mouth with baking soda</td>
 <tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
@@ -165,30 +165,32 @@
 <tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
 <tr><td>1:00 PM </td><td>Brisk walk outside</td>
 <tr><td>3:00 PM </td><td>If tired use NuCalm</td>
-<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy </td>
-<!--<tr><td>4:30 PM </td><td>One cup bone broth </td>-->
+<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>5:00 PM </td><td>Beef, potato, vegetables, spices, prunes </td>
-<tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium</td>
+<tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium, NAC</td>
 <tr><td>        </td><td>Rinse mouth with baking soda</td>
 <tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
 <tr><td>8:00 PM </td><td>Lights dimmed </td>
 <tr><td>8:15 PM </td><td>Turn off computer </td>
 <tr><td>        </td><td>Floss teeth, Hydro Floss with small amount of H₂O₂, tounge scraper </td>
 <tr><td>        </td><td>Oil pulling for teeth </td>
+<tr><td>10:00 PM </td><td>Go to sleep </td>
 </table>
 
 <br>
-<p><b>Monthly Routine</b></p>
+<p><b>Throughout the day</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Jumping for lymphatic system</td>
+<tr><td> </td><td>Go outside, look far away</td>
 </table>
 
 <br>
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Inject bioregulator peptides </td>
+<tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Inject bioregulator and other peptides </td>
 <tr><td> </td><td>Very small embryonic-like stem cell therapy </td>
 </table>
 
@@ -197,6 +199,12 @@
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Blood testing </td>
 <tr><td> </td><td>Go to dentist for teeth cleaning </td>
+</table>
+
+<br>
+<p><b>Biyearly Routine</b></p>
+<table style="celllpadding: 100px">
+<tr><td> </td><td>Replace shower water filter </td>
 </table>
 
 <br>
@@ -211,7 +219,8 @@
 <br>
 <p><b>One-time setup</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Whole house water filter from ophorawater.com</td>
+<tr><td> </td><td>Kitchen water filter from ophorawater.com</td>
+<tr><td> </td><td>Whole house water filter</td>
 <tr><td> </td><td>Whole house air filter from iqair.com</td>
 <tr><td> </td><td>Standing desk from varidesk.com</td>
 <tr><td> </td><td>UV blocking screens over monitors to protect eyes from reticare.com</td>
