--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
 
             <p>
             <b>Email</b> <br>
-              patients@institutereg.com
+              hello@institutereg.com
             </p>
 
           </div>
