--- a/routine.html
+++ b/routine.html
@@ -166,6 +166,7 @@
 <tr><td>1:00 PM </td><td>Brisk walk outside</td>
 <tr><td>3:00 PM </td><td>If tired use NuCalm</td>
 <tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>
+<tr><td>4:30 PM </td><td>One cup of bone broth</td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>5:00 PM </td><td>Beef, potato, vegetables, spices, prunes </td>
@@ -190,8 +191,8 @@
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
-<tr><td> </td><td>Inject bioregulator and other peptides </td>
 <tr><td> </td><td>Very small embryonic-like stem cell therapy </td>
+<tr><td> </td><td>Inject bioregulator and other peptides </td>
 </table>
 
 <br>
@@ -224,6 +225,8 @@
 <tr><td> </td><td>Whole house air filter from iqair.com</td>
 <tr><td> </td><td>Standing desk from varidesk.com</td>
 <tr><td> </td><td>UV blocking screens over monitors to protect eyes from reticare.com</td>
+<tr><td> </td><td>Cell phone permanently in airplane mode</td>
+<tr><td> </td><td>Cell phone connected to Internet with ethernet adapter</td>
 </table>
 
 <br>
