--- a/routine.html
+++ b/routine.html
@@ -138,44 +138,45 @@
 
 <p><b>Daily Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td>6:00 AM </td><td>Turn on lights at full brightness</td>
+<tr><td>6:00 AM </td><td>Turn on lights at full brightness for circadian rhythm</td>
 <tr><td>        </td><td>Drink water </td>
-<tr><td>7:00 AM </td><td>Weight lifting at the gym, a few days per week </td>
+<tr><td>7:00 AM </td><td>Sprints </td>
+<tr><td>        </td><td>Weight lifting, two times per week </td>
 <tr><td>        </td><td>Coming soon: Blood Flow Restriction training</td>
 <tr><td>8:00 AM </td><td>Red and infrared light therapy on entire body</td>
 <tr><td>        </td><td>Maragen calcium in two cups water</td>
 <tr><td>        </td><td>Coming soon: Sauna</td>
-<tr><td>8:15 AM </td><td>Apply sunscreen to face </td>
-<tr><td>        </td><td>Brisk walk outside to set circadian rhythm </td>
-<tr><td>        </td><td>While walking wear glasses to protect eyes from UV light </td>
-<tr><td>        </td><td>While walking wear hat with wide brim to protect facial skin from UV light </td>
-<tr><td>9:00 AM </td><td>Molecular hydrogen in glass of water</td>
+<tr><td>8:15 AM </td><td>Apply mineral sunscreen to face </td>
+<tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
+<tr><td>        </td><td>While outside wear glasses to protect eyes from UV light </td>
+<tr><td>        </td><td>While outside wear hat with wide brim to protect facial skin from UV light </td>
+<tr><td>9:00 AM </td><td>Molecular hydrogen in water</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
-<tr><td>        </td><td>Cucumber, macadamia nuts</td>
 <tr><td>        </td><td>50 supplements</td>
-<tr><td>        </td><td>Rinse mouth with baking soda</td>
+<tr><td>        </td><td>Cucumber, macadamia nuts</td>
 <tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
+<tr><td>10:00 AM </td><td>Brisk walk or jog outside for circadian rhythm </td>
+<tr><td>11:00 AM </td><td>Brisk walk or jog outside for circadian rhythm </td>
 <tr><td>1:00 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Lentil soup, pork, salt, sunflower greens, sprouts, strawberries</td>    
 <tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium</td>
-<tr><td>        </td><td>Rinse mouth with baking soda</td>
 <tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
-<tr><td>1:00 PM </td><td>Brisk walk outside</td>
-<tr><td>3:00 PM </td><td>If tired use NuCalm</td>
+<tr><td>1:00 PM </td><td>Brisk walk outside to get dopamine for eyes</td>
+<tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
 <tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>
-<tr><td>4:30 PM </td><td>One cup of bone broth</td>
+<tr><td>4:30 PM </td><td>Half a cup of water</td>
+<tr><td>        </td><td>Half a cup of bone broth</td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
-<tr><td>5:00 PM </td><td>Beef, potato, vegetables, spices, prunes </td>
+<tr><td>        </td><td>Floss teeth, Hydro Floss with small amount of H₂O₂, tounge scraper </td>
+<tr><td>5:00 PM </td><td>Fish, wild rice, steamed vegetables, spices, prunes </td>
 <tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium, NAC</td>
-<tr><td>        </td><td>Rinse mouth with baking soda</td>
 <tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
 <tr><td>8:00 PM </td><td>Lights dimmed </td>
 <tr><td>8:15 PM </td><td>Turn off computer </td>
-<tr><td>        </td><td>Floss teeth, Hydro Floss with small amount of H₂O₂, tounge scraper </td>
 <tr><td>        </td><td>Oil pulling for teeth </td>
 <tr><td>10:00 PM </td><td>Go to sleep </td>
 </table>
@@ -183,8 +184,8 @@
 <br>
 <p><b>Throughout the day</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Jumping for lymphatic system</td>
 <tr><td> </td><td>Go outside, look far away</td>
+<tr><td> </td><td>Jumping for lymphatic system</td>
 </table>
 
 <br>
@@ -196,22 +197,23 @@
 </table>
 
 <br>
-<p><b>Yearly Routine</b></p>
+<p><b>Biyearly Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Blood testing </td>
 <tr><td> </td><td>Go to dentist for teeth cleaning </td>
 </table>
 
 <br>
-<p><b>Biyearly Routine</b></p>
+<p><b>Yearly Routine</b></p>
 <table style="celllpadding: 100px">
+<tr><td> </td><td>Blood testing </td>
 <tr><td> </td><td>Replace shower water filter </td>
+<tr><td> </td><td>Replace kitchen water filter </td>
 </table>
 
 <br>
 <p><b>Occasional Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Extracorporeal blood oxygenation and ozonation </td>
+<tr><td> </td><td>Possibly: Extracorporeal blood oxygenation and ozonation </td>
 <tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations if found</td>
 <tr><td> </td><td>Test home for mold</td>
 <tr><td> </td><td>Test home for EMFs</td>
@@ -240,8 +242,8 @@
 <tr><td> </td><td>No flour</td>
 <tr><td> </td><td>No gluten</td>
 <tr><td> </td><td>No acellular carbohydrates</td>
-<tr><td> </td><td>Minimal linoleic acid</td>
 <tr><td> </td><td>No industrial seed oils</td>
+<tr><td> </td><td>Minimal linoleic acid</td>
 <tr><td> </td><td>Minimal oxalates</td>
 <tr><td> </td><td>Minimal dairy</td>
 <tr><td> </td><td>Minimal iodine</td>
