--- a/routine.html
+++ b/routine.html
@@ -178,7 +178,8 @@
 <tr><td>8:00 PM </td><td>Lights dimmed </td>
 <tr><td>8:15 PM </td><td>Turn off computer </td>
 <tr><td>        </td><td>Oil pulling for teeth </td>
-<tr><td>10:00 PM </td><td>Go to sleep </td>
+<tr><td>9:00 PM </td><td>Turn on air conditioner</td>
+<tr><td>10:00 PM</td><td>Go to sleep </td>
 </table>
 
 <br>
@@ -243,6 +244,7 @@
 <tr><td> </td><td>No gluten</td>
 <tr><td> </td><td>No acellular carbohydrates</td>
 <tr><td> </td><td>No industrial seed oils</td>
+<tr><td> </td><td>No freshwater fish</td>
 <tr><td> </td><td>Minimal linoleic acid</td>
 <tr><td> </td><td>Minimal oxalates</td>
 <tr><td> </td><td>Minimal dairy</td>
