--- a/routine.html
+++ b/routine.html
@@ -156,29 +156,30 @@
 <tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
 <tr><td>        </td><td>50 supplements</td>
 <tr><td>        </td><td>Cucumber, macadamia nuts</td>
-<tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
+<tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>10:00 AM </td><td>Brisk walk or jog outside for circadian rhythm </td>
-<tr><td>11:00 AM </td><td>Brisk walk or jog outside for circadian rhythm </td>
 <tr><td>1:00 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Lentil soup, pork, salt, sunflower greens, sprouts, strawberries</td>    
 <tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium</td>
-<tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
-<tr><td>1:00 PM </td><td>Brisk walk outside to get dopamine for eyes</td>
+<tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
+<tr><td>        </td><td>Brisk walk outside for glucose uptake and dopamine into eyes</td>
+<tr><td>        </td><td>Soleus pushups while sitting for glucose uptake</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
 <tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>
-<tr><td>4:30 PM </td><td>Half a cup of water</td>
-<tr><td>        </td><td>Half a cup of bone broth</td>
+<tr><td>4:30 PM </td><td>Drink water or bone broth</td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Floss teeth, Hydro Floss with small amount of H₂O₂, tounge scraper </td>
 <tr><td>5:00 PM </td><td>Fish, wild rice, steamed vegetables, spices, prunes </td>
 <tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium, NAC</td>
-<tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
+<tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
+<tr><td>        </td><td>Brisk walk outside for glucose uptake and dopamine into eyes</td>
+<tr><td>        </td><td>Soleus pushups while sitting for glucose uptake</td>
 <tr><td>8:00 PM </td><td>Lights dimmed </td>
 <tr><td>8:15 PM </td><td>Turn off computer </td>
 <tr><td>        </td><td>Oil pulling for teeth </td>
-<tr><td>9:00 PM </td><td>Turn on air conditioner</td>
+<tr><td>9:30 PM </td><td>Turn on air conditioner</td>
 <tr><td>10:00 PM</td><td>Go to sleep </td>
 </table>
 
