--- a/routine.html
+++ b/routine.html
@@ -143,7 +143,7 @@
 <tr><td>7:00 AM </td><td>Sprints </td>
 <tr><td>        </td><td>Weight lifting, two times per week </td>
 <tr><td>        </td><td>Coming soon: Blood Flow Restriction training</td>
-<tr><td>8:00 AM </td><td>Red and infrared light therapy on entire body</td>
+<tr><td>8:00 AM </td><td>Red and infrared light therapy on entire body</td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <tr><td>        </td><td>Maragen calcium in two cups water</td>
 <tr><td>        </td><td>Coming soon: Sauna</td>
 <tr><td>8:15 AM </td><td>Apply mineral sunscreen to face </td>
