--- a/routine.html
+++ b/routine.html
@@ -136,47 +136,46 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-8">
 
+
 <p><b>Daily Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness for circadian rhythm</td>
-<tr><td>        </td><td>Drink water </td>
-<tr><td>7:00 AM </td><td>Sprints </td>
-<tr><td>        </td><td>Weight lifting, two times per week </td>
-<tr><td>        </td><td>Coming soon: Blood Flow Restriction training</td>
-<tr><td>8:00 AM </td><td>Red and infrared light therapy on entire body</td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
-<tr><td>        </td><td>Maragen calcium in two cups water</td>
-<tr><td>        </td><td>Coming soon: Sauna</td>
-<tr><td>8:15 AM </td><td>Apply mineral sunscreen to face </td>
+<tr><td>        </td><td>Various exercise including weight lifting, sprinting, blood flow restriction training</td>
+<tr><td>        </td><td>Red and infrared light therapy on entire body</td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
+<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>
+<tr><td>8:30 AM </td><td>Molecular hydrogen supplement in one cup water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
-<tr><td>        </td><td>While outside wear glasses to protect eyes from UV light </td>
-<tr><td>        </td><td>While outside wear hat with wide brim to protect facial skin from UV light </td>
-<tr><td>9:00 AM </td><td>Molecular hydrogen in water</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
 <tr><td>        </td><td>50 supplements</td>
-<tr><td>        </td><td>Cucumber, macadamia nuts</td>
+<tr><td>        </td><td>Cucumber, sometimes macadamia nuts</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
-<tr><td>10:00 AM </td><td>Brisk walk or jog outside for circadian rhythm </td>
+<tr><td>12:30 PM</td><td>Bilberry Extract, Pure Encapsulations (Best taken before a meal)</td>
 <tr><td>1:00 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Lentil soup, pork, salt, sunflower greens, sprouts, strawberries</td>    
-<tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium</td>
+<tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
+<tr><td>        </td><td>Primal Multi, Designs for Health</td>
+<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
+<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
-<tr><td>        </td><td>Brisk walk outside for glucose uptake and dopamine into eyes</td>
-<tr><td>        </td><td>Soleus pushups while sitting for glucose uptake</td>
+<tr><td>        </td><td>Brisk walk outside for glucose uptake and dopamine into eyes to prevent myopia</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
 <tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>
-<tr><td>4:30 PM </td><td>Drink water or bone broth</td>
+<tr><td>4:30 PM </td><td>Drink water</td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Floss teeth, Hydro Floss with small amount of H₂O₂, tounge scraper </td>
-<tr><td>5:00 PM </td><td>Fish, wild rice, steamed vegetables, spices, prunes </td>
-<tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium, NAC</td>
+<tr><td>5:00 PM </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
+<tr><td>        </td><td>Prunes for desert</td>
+<tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
+<tr><td>        </td><td>Primal Multi, Designs for Health</td>
+<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
+<tr><td>        </td><td>Magnesium Threonate, Dr. Mercola</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
-<tr><td>        </td><td>Brisk walk outside for glucose uptake and dopamine into eyes</td>
-<tr><td>        </td><td>Soleus pushups while sitting for glucose uptake</td>
-<tr><td>8:00 PM </td><td>Lights dimmed </td>
+<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
+<tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>8:15 PM </td><td>Turn off computer </td>
 <tr><td>        </td><td>Oil pulling for teeth </td>
 <tr><td>9:30 PM </td><td>Turn on air conditioner</td>
@@ -184,17 +183,47 @@
 </table>
 
 <br>
+<p><b>Morning Supplements</b></p>
+<table style="celllpadding: 100px">
+<tr><td>        </td><td>Primal Multi, Designs for Health</td>
+<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
+<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations</td>
+<tr><td>        </td><td>Myco Supreme, Designs For Health</td>
+<tr><td>        </td><td>Organ Synergy, Designs For Health</td>
+<tr><td>        </td><td>Astaxanthin, Designs For Health</td>
+<tr><td>        </td><td>Aloe/200x, Designs For Health</td>
+<tr><td>        </td><td>Annatto-E Synergy, Designs For Health</td>
+<tr><td>        </td><td>Tru Niagen, ChromaDex</td>
+<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension</td>
+<tr><td>        </td><td>NAC, Thorne</td>
+<tr><td>        </td><td>Perfect Amino, Body Health</td>
+<tr><td>        </td><td>Hyaluronic acid, Do Not Age</td>
+<tr><td>        </td><td>Cell Protector, Pure Synergy</td>
+</table>
+
+<br>
 <p><b>Throughout the day</b></p>
 <table style="celllpadding: 100px">
+<tr><td> </td><td>Various mini exercises</td>
+<tr><td> </td><td>Jump for lymphatic system</td>
+<tr><td> </td><td>Stand at a standup desk while working</td>
 <tr><td> </td><td>Go outside, look far away</td>
-<tr><td> </td><td>Jumping for lymphatic system</td>
+</table>
+
+<br>
+<p><b>When Outside</b></p>
+<table style="celllpadding: 100px">
+<tr><td>        </td><td>Apply mineral sunscreen to face </td>
+<tr><td>        </td><td>Wear UV blocking glasses to protect eyes from UV light </td>
+<tr><td>        </td><td>Wear hat with wide brim to protect facial skin from UV light </td>
+<tr><td>        </td><td>Look far away </td>
 </table>
 
 <br>
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
-<tr><td> </td><td>Very small embryonic-like stem cell therapy </td>
+<tr><td> </td><td>VSEL (Very small embryonic-like) stem cell therapy </td>
 <tr><td> </td><td>Inject bioregulator and other peptides </td>
 </table>
 
@@ -215,7 +244,7 @@
 <br>
 <p><b>Occasional Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Possibly: Extracorporeal blood oxygenation and ozonation </td>
+<!--<tr><td> </td><td>Possibly: Extracorporeal blood oxygenation and ozonation </td>-->
 <tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations if found</td>
 <tr><td> </td><td>Test home for mold</td>
 <tr><td> </td><td>Test home for EMFs</td>
@@ -224,8 +253,7 @@
 <br>
 <p><b>One-time setup</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Kitchen water filter from ophorawater.com</td>
-<tr><td> </td><td>Whole house water filter</td>
+<tr><td> </td><td>Kitchen water filter <a href="https://shop.ophorawater.com/collections/point-of-use-systems/products/bio-renew-system" target="_blank">Link</a></td>
 <tr><td> </td><td>Whole house air filter from iqair.com</td>
 <tr><td> </td><td>Standing desk from varidesk.com</td>
 <tr><td> </td><td>UV blocking screens over monitors to protect eyes from reticare.com</td>
@@ -266,7 +294,7 @@
 
 <tr><td> </td><td>No bright lights late at night</td>
 <tr><td> </td><td>No EMFs, cordless phones, WIFI routers, cell phones</td>
-<tr><td> </td><td>Minimal x-rays and CAT scans</td>
+<tr><td> </td><td>Minimal x-rays and CT scans</td>
 <tr><td> </td><td>Minimal TV</td>
 <tr><td> </td><td>No contact with outdoor high grass to avoid Lyme disease</td>
 
