--- a/routine.html
+++ b/routine.html
@@ -148,7 +148,7 @@
 <tr><td>9:30 AM </td><td>Breakfast</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
-<tr><td>        </td><td>50 supplements</td>
+<tr><td>        </td><td>Morning supplements</td>
 <tr><td>        </td><td>Cucumber, sometimes macadamia nuts</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>12:30 PM</td><td>Bilberry Extract, Pure Encapsulations (Best taken before a meal)</td>
@@ -186,6 +186,8 @@
 <p><b>Morning Supplements</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Primal Multi, Designs for Health</td>
+<tr><td>        </td><td>Vitamin D3, Jarrow</td>
+<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
 <tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations</td>
 <tr><td>        </td><td>Myco Supreme, Designs For Health</td>
@@ -193,12 +195,13 @@
 <tr><td>        </td><td>Astaxanthin, Designs For Health</td>
 <tr><td>        </td><td>Aloe/200x, Designs For Health</td>
 <tr><td>        </td><td>Annatto-E Synergy, Designs For Health</td>
-<tr><td>        </td><td>Tru Niagen, ChromaDex</td>
+<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex</td>
 <tr><td>        </td><td>TMG (Trimethylglycine), Life Extension</td>
 <tr><td>        </td><td>NAC, Thorne</td>
 <tr><td>        </td><td>Perfect Amino, Body Health</td>
 <tr><td>        </td><td>Hyaluronic acid, Do Not Age</td>
 <tr><td>        </td><td>Cell Protector, Pure Synergy</td>
+<tr><td>        </td><td>Rutin, Now Foods</td>
 </table>
 
 <br>
@@ -248,6 +251,7 @@
 <tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations if found</td>
 <tr><td> </td><td>Test home for mold</td>
 <tr><td> </td><td>Test home for EMFs</td>
+<tr><td> </td><td>Cyrex food sensitivity testing, exclude foods that come up</td>
 </table>
 
 <br>
@@ -273,7 +277,7 @@
 <tr><td> </td><td>No gluten</td>
 <tr><td> </td><td>No acellular carbohydrates</td>
 <tr><td> </td><td>No industrial seed oils</td>
-<tr><td> </td><td>No freshwater fish</td>
+<tr><td> </td><td>No freshwater or farmed fish</td>
 <tr><td> </td><td>Minimal linoleic acid</td>
 <tr><td> </td><td>Minimal oxalates</td>
 <tr><td> </td><td>Minimal dairy</td>
@@ -283,7 +287,7 @@
 <tr><td> </td><td>No plastic in contact with food</td>
 <tr><td> </td><td>No teflon non-stick cookware</td>
 
-<tr><td> </td><td>No chemicals</td>
+<tr><td> </td><td>Minimal chemicals</td>
 <tr><td> </td><td>Minimal drugs</td>
 <tr><td> </td><td>Minimal antibiotics</td>
 <tr><td> </td><td>No IV antibiotics</td>
