--- a/routine.html
+++ b/routine.html
@@ -162,7 +162,7 @@
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake and dopamine into eyes to prevent myopia</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
-<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>
+<!--<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>-->
 <tr><td>4:30 PM </td><td>Drink water</td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
