--- a/routine.html
+++ b/routine.html
@@ -166,7 +166,7 @@
 <tr><td>4:30 PM </td><td>Drink water</td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
-<tr><td>        </td><td>Floss teeth, Hydro Floss with small amount of H₂O₂, tounge scraper </td>
+<tr><td>        </td><td>Floss teeth, Hydro Floss with small amount of H₂O₂, tounge scraper, oil pulling </td>
 <tr><td>5:00 PM </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
 <tr><td>        </td><td>Prunes for desert</td>
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
@@ -177,7 +177,6 @@
 <tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>8:15 PM </td><td>Turn off computer </td>
-<tr><td>        </td><td>Oil pulling for teeth </td>
 <tr><td>9:30 PM </td><td>Turn on air conditioner</td>
 <tr><td>10:00 PM</td><td>Go to sleep </td>
 </table>
