--- a/routine.html
+++ b/routine.html
@@ -140,21 +140,22 @@
 <p><b>Daily Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness for circadian rhythm</td>
+<tr><td>        </td><td>Weight self on scale</td>
 <tr><td>        </td><td>Various exercise including weight lifting, sprinting, blood flow restriction training</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body</td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>
 <tr><td>8:30 AM </td><td>Molecular hydrogen supplement in one cup water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
+<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations (Best taken before a meal)</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
 <tr><td>        </td><td>Morning supplements</td>
-<tr><td>        </td><td>Cucumber, sometimes macadamia nuts</td>
+<tr><td>        </td><td>Cucumber peeled, sometimes macadamia nuts</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
-<tr><td>12:30 PM</td><td>Bilberry Extract, Pure Encapsulations (Best taken before a meal)</td>
 <tr><td>1:00 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
-<tr><td>        </td><td>Lentil soup, pork, salt, sunflower greens, sprouts, strawberries</td>    
+<tr><td>        </td><td>Soup consisting of lentils, onion, pork, onion, salt, with sunflower sprouts, strawberries</td>    
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
@@ -173,6 +174,7 @@
 <tr><td>        </td><td>Primal Multi, Designs for Health</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola</td>
+<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
@@ -182,7 +184,7 @@
 </table>
 
 <br>
-<p><b>Morning Supplements</b></p>
+<p><b>Morning Supplements in capsule form</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Primal Multi, Designs for Health</td>
 <tr><td>        </td><td>Vitamin D3, Jarrow</td>
@@ -200,8 +202,18 @@
 <tr><td>        </td><td>Perfect Amino, Body Health</td>
 <tr><td>        </td><td>Hyaluronic acid, Do Not Age</td>
 <tr><td>        </td><td>Cell Protector, Pure Synergy</td>
+<tr><td>        </td><td>Broc Elite Plus, Mara Labs</td>
 <tr><td>        </td><td>Rutin, Now Foods</td>
 </table>
+
+<br>
+<p><b>Morning Supplements in powder form</b></p>
+<table style="celllpadding: 100px">
+<tr><td>        </td><td>Creatine powder, Thorne</td>
+<tr><td>        </td><td>Pomela powder, Nootropics Depot</td>
+<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic</td>
+</table>
+
 
 <br>
 <p><b>Throughout the day</b></p>
@@ -226,7 +238,7 @@
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
 <tr><td> </td><td>VSEL (Very small embryonic-like) stem cell therapy </td>
-<tr><td> </td><td>Inject bioregulator and other peptides </td>
+<tr><td> </td><td>Inject bioregulators peptides from CanlabResearch</td>
 </table>
 
 <br>
@@ -238,7 +250,7 @@
 <br>
 <p><b>Yearly Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Blood testing </td>
+<tr><td> </td><td>Blood testing at Labcorp or Quest </td>
 <tr><td> </td><td>Replace shower water filter </td>
 <tr><td> </td><td>Replace kitchen water filter </td>
 </table>
@@ -247,10 +259,11 @@
 <p><b>Occasional Routine</b></p>
 <table style="celllpadding: 100px">
 <!--<tr><td> </td><td>Possibly: Extracorporeal blood oxygenation and ozonation </td>-->
-<tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations if found</td>
+<tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations found by surgical removal</td>
 <tr><td> </td><td>Test home for mold</td>
 <tr><td> </td><td>Test home for EMFs</td>
-<tr><td> </td><td>Cyrex food sensitivity testing, exclude foods that come up</td>
+<tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td>
+<tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> <!-- Actionable?-->
 </table>
 
 <br>
@@ -258,6 +271,7 @@
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Kitchen water filter <a href="https://shop.ophorawater.com/collections/point-of-use-systems/products/bio-renew-system" target="_blank">Link</a></td>
 <tr><td> </td><td>Whole house air filter from iqair.com</td>
+<tr><td> </td><td>Cookware from xtrema.com </td>
 <tr><td> </td><td>Standing desk from varidesk.com</td>
 <tr><td> </td><td>UV blocking screens over monitors to protect eyes from reticare.com</td>
 <tr><td> </td><td>Cell phone permanently in airplane mode</td>
@@ -283,16 +297,18 @@
 <tr><td> </td><td>Minimal iodine</td>
 <tr><td> </td><td>Minimal caffeine</td>
 
-<tr><td> </td><td>No plastic in contact with food</td>
+<tr><td> </td><td>Meat is cooked slowly at very low temperature</td>
+<tr><td> </td><td>Food contacts only glass or ceramic</td>
+<tr><td> </td><td>Food never contacts plastic </td>
 <tr><td> </td><td>No teflon non-stick cookware</td>
 
 <tr><td> </td><td>Minimal chemicals</td>
 <tr><td> </td><td>Minimal drugs</td>
 <tr><td> </td><td>Minimal antibiotics</td>
 <tr><td> </td><td>No IV antibiotics</td>
-<tr><td> </td><td>No NSAIDs</td>
+<tr><td> </td><td>Minimal NSAIDs</td>
 <tr><td> </td><td>No heavy metals</td>
-<tr><td> </td><td>Minimal vaccines</td>
+<tr><td> </td><td>Minimal mRNA vaccines</td>
 <tr><td> </td><td>Minimal personal care products</td>
 
 <tr><td> </td><td>No bright lights late at night</td>
@@ -306,7 +322,7 @@
 <tr><td> </td><td>No root canals</td>
 <tr><td> </td><td>No metal dental implants</td>
 </table>
-              
+
           </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
