--- a/routine.html
+++ b/routine.html
@@ -134,7 +134,7 @@
     <section class="pt-6 pt-md-8">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-12 col-md-10 col-lg-9 col-xl-8">
+          <div class="col-12 col-md-10 col-lg-10 col-xl-10">
 
 
 <p><b>Daily Routine</b></p>
@@ -143,7 +143,7 @@
 <tr><td>        </td><td>Weight self on scale</td>
 <tr><td>        </td><td>Various exercise including weight lifting, sprinting, blood flow restriction training</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body</td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
-<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>
+<!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>-->
 <tr><td>8:30 AM </td><td>Molecular hydrogen supplement in one cup water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
 <tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations (Best taken before a meal)</td>
@@ -153,9 +153,9 @@
 <tr><td>        </td><td>Morning supplements</td>
 <tr><td>        </td><td>Cucumber peeled, sometimes macadamia nuts</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
-<tr><td>1:00 PM </td><td>Lunch</td>
+<tr><td>12:30 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
-<tr><td>        </td><td>Soup consisting of lentils, onion, pork, onion, salt, with sunflower sprouts, strawberries</td>    
+<tr><td>        </td><td>Soup consisting of lentils, onion, pork, onion, with sunflower sprouts, strawberries</td>    
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
@@ -164,19 +164,22 @@
 <tr><td>        </td><td>Brisk walk outside for glucose uptake and dopamine into eyes to prevent myopia</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
 <!--<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>-->
-<tr><td>4:30 PM </td><td>Drink water</td>
+<tr><td>4:00 PM </td><td>Drink water</td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
-<tr><td>        </td><td>Floss teeth, Hydro Floss with small amount of H₂O₂, tounge scraper, oil pulling </td>
-<tr><td>5:00 PM </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
+<tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
 <tr><td>        </td><td>Prunes for desert</td>
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex</td>
-<tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
+<tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
+<tr><td>        </td><td>Floss teeth </td>
+<tr><td>        </td><td>Hydro Floss with small amount of H₂O₂ </td>
+<tr><td>        </td><td>Tounge scraper </td>
+<tr><td>        </td><td>Sometimes dental oil pulling </td>
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>8:15 PM </td><td>Turn off computer </td>
 <tr><td>9:30 PM </td><td>Turn on air conditioner</td>
@@ -198,7 +201,7 @@
 <tr><td>        </td><td>Annatto-E Synergy, Designs For Health</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex</td>
 <tr><td>        </td><td>TMG (Trimethylglycine), Life Extension</td>
-<tr><td>        </td><td>NAC, Thorne</td>
+<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne</td>
 <tr><td>        </td><td>Perfect Amino, Body Health</td>
 <tr><td>        </td><td>Hyaluronic acid, Do Not Age</td>
 <tr><td>        </td><td>Cell Protector, Pure Synergy</td>
@@ -237,8 +240,21 @@
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
-<tr><td> </td><td>VSEL (Very small embryonic-like) stem cell therapy </td>
-<tr><td> </td><td>Inject bioregulators peptides from CanlabResearch</td>
+<tr><td> </td><td>VSEL (Very small embryonic-like) stem cell therapy <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Inject bioregulators peptides from Can-Lab</td>
+</table>
+
+<br>
+<p><b>Bioregulator Peptide Routine</b></p>
+<table style="celllpadding: 100px">
+<tr><td> </td><td>Epitalon</td>
+<tr><td> </td><td>Pinealon</td>
+<tr><td> </td><td>Tymogen</td>
+<tr><td> </td><td>Vesugen</td>
+<tr><td> </td><td>Vilon</td>
+<tr><td> </td><td>Cardiogen</td>
+<tr><td> </td><td>Cortagen</td>
+<tr><td> </td><td>Crystagen</td>
 </table>
 
 <br>
@@ -250,7 +266,7 @@
 <br>
 <p><b>Yearly Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Blood testing at Labcorp or Quest </td>
+<tr><td> </td><td>Blood testing at Labcorp or Quest (No biotin for a few days before test) </td>
 <tr><td> </td><td>Replace shower water filter </td>
 <tr><td> </td><td>Replace kitchen water filter </td>
 </table>
@@ -259,7 +275,7 @@
 <p><b>Occasional Routine</b></p>
 <table style="celllpadding: 100px">
 <!--<tr><td> </td><td>Possibly: Extracorporeal blood oxygenation and ozonation </td>-->
-<tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations found by surgical removal</td>
+<tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations found</td>
 <tr><td> </td><td>Test home for mold</td>
 <tr><td> </td><td>Test home for EMFs</td>
 <tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td>
@@ -288,9 +304,9 @@
 <tr><td> </td><td>No alcohol</td>
 <tr><td> </td><td>No flour</td>
 <tr><td> </td><td>No gluten</td>
-<tr><td> </td><td>No acellular carbohydrates</td>
 <tr><td> </td><td>No industrial seed oils</td>
 <tr><td> </td><td>No freshwater or farmed fish</td>
+<tr><td> </td><td>Minimal acellular carbohydrates</td>
 <tr><td> </td><td>Minimal linoleic acid</td>
 <tr><td> </td><td>Minimal oxalates</td>
 <tr><td> </td><td>Minimal dairy</td>
