--- a/routine.html
+++ b/routine.html
@@ -140,7 +140,7 @@
 <p><b>Daily Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness for circadian rhythm</td>
-<tr><td>        </td><td>Weight self on scale</td>
+<tr><td>        </td><td>Weigh self on scale</td>
 <tr><td>        </td><td>Various exercise including weight lifting, sprinting, blood flow restriction training</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body</td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>-->
