--- a/routine.html
+++ b/routine.html
@@ -168,7 +168,7 @@
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
-<tr><td>        </td><td>Prunes for desert</td>
+<tr><td>        </td><td>Prunes for dessert</td>
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
@@ -231,7 +231,7 @@
 <p><b>When Outside</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Apply mineral sunscreen to face </td>
-<tr><td>        </td><td>Wear UV blocking glasses to protect eyes from UV light </td>
+<tr><td>        </td><td>Wear UV-blocking glasses to protect eyes from UV light </td>
 <tr><td>        </td><td>Wear hat with wide brim to protect facial skin from UV light </td>
 <tr><td>        </td><td>Look far away </td>
 </table>
@@ -299,7 +299,7 @@
 <table style="celllpadding: 100px">
 <tr><td> </td><td>No processed food</td>
 <tr><td> </td><td>No burned or blackened foods</td>
-<tr><td> </td><td>No high heat cooking</td>
+<tr><td> </td><td>No high-heat cooking</td>
 <tr><td> </td><td>No fruit juice</td>
 <tr><td> </td><td>No alcohol</td>
 <tr><td> </td><td>No flour</td>
@@ -316,7 +316,7 @@
 <tr><td> </td><td>Meat is cooked slowly at very low temperature</td>
 <tr><td> </td><td>Food contacts only glass or ceramic</td>
 <tr><td> </td><td>Food never contacts plastic </td>
-<tr><td> </td><td>No teflon non-stick cookware</td>
+<tr><td> </td><td>No Teflon or non-stick cookware</td>
 
 <tr><td> </td><td>Minimal chemicals</td>
 <tr><td> </td><td>Minimal drugs</td>
